<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:srcCompat="@drawable/ic_baseline_room_service_24" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.Tip_Calculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/how_was_the_service"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

        <RadioGroup
            android:id="@+id/radioOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:checkedButton="@id/opt_fifteen_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:id="@+id/opt_twenty_percent"
                style="@style/Widget.Tip_calculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/opt_eighteen_percent"
                style="@style/Widget.Tip_calculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/opt_fifteen_percent"
                style="@style/Widget.Tip_calculator.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okey_15" />

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/switch_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/switch_button"
            app:srcCompat="@drawable/ic_baseline_call_made_24" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_button"
            style="@style/Widget.Tip_Calculator.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_round_up"
            app:layout_constraintTop_toBottomOf="@+id/radioOptions" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch_button"
            app:layout_constraintTop_toBottomOf="@+id/switch_button" />

        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.Tip_Calculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton"
            tools:text="Tip amount: $10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
